--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>mz</title>
+    <title>myvue</title>
+    <link rel="stylesheet" href="./static/css/common.css">
+    <link rel="stylesheet" href="./static/font-awesome-4.7.0/css/font-awesome.css">
   </head>
+  <script>
+    document.documentElement.style.fontSize = document.documentElement.clientWidth / 3.75 + 'px'
+    window.onresize = function () {
+      document.documentElement.style.fontSize = document.documentElement.clientWidth / 3.75 + 'px'
+    }    
+</script>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
