--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>myvue</title>
     <link rel="stylesheet" href="./static/css/common.css">
+    <link rel="stylesheet" href="./static/css/animate.css">
     <link rel="stylesheet" href="./static/font-awesome-4.7.0/css/font-awesome.css">
   </head>
   <script>
     document.documentElement.style.fontSize = document.documentElement.clientWidth / 3.75 + 'px'
     window.onresize = function () {
       document.documentElement.style.fontSize = document.documentElement.clientWidth / 3.75 + 'px'
-    }    
+    }
 </script>
   <body>
     <div id="app"></div>
